// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot with children 1`] = `
<DocumentFragment>
  <li
    aria-expanded="false"
    aria-selected="false"
    class="pf-v6-c-tree-view__list-item"
    role="treeitem"
    tabindex="-1"
  >
    <div
      class="pf-v6-c-tree-view__content"
    >
      <button
        class="pf-v6-c-tree-view__node"
        type="button"
      >
        <span
          class="pf-v6-c-tree-view__node-container"
        >
          <span
            class="pf-v6-c-tree-view__node-toggle"
            tabindex="-1"
          >
            <span
              class="pf-v6-c-tree-view__node-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
          <span
            class="pf-v6-c-tree-view__node-text"
          >
            Item name
          </span>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`Matches snapshot without children 1`] = `
<DocumentFragment>
  <li
    aria-expanded="false"
    aria-selected="false"
    class="pf-v6-c-tree-view__list-item"
    role="treeitem"
    tabindex="-1"
  >
    <div
      class="pf-v6-c-tree-view__content"
    >
      <button
        class="pf-v6-c-tree-view__node"
        type="button"
      >
        <span
          class="pf-v6-c-tree-view__node-container"
        >
          <span
            class="pf-v6-c-tree-view__node-text"
          >
            Item name
          </span>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;
